Background/Title Icon added, link boxes added

--- a/web.html
+++ b/web.html
@@ -6,13 +6,20 @@ Created by Nova
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="design.css">
-		<link href="PLACEHOLDER" rel="stylesheet">
-		<title>About Nova</title>
+		<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+		<link rel="shortcut icon" href="imgs/titleicon.ico" type="image/png"> 
+		<title>Nova</title>
 	</head>
 	
 	<body>
-		<div class="blackbar">
-		
+		<div class="blackbar">Nova</div>
+		<img src="imgs/background.jpg" alt="background" class="bgimg" type="image/png">
+		<a href="https://twitter.com/ActuallyNova" class="linkrefs" target="_blank">Twitter</a>
+		<a href="https://github.com/actuallynova/" class="linkrefs" target="_blank">Git</a>
+		<a href="https://steamcommunity.com/id/nova_xd" class="linkrefs" target="_blank">Steam</a>
+		<a href="https://www.twitch.tv/novaeu" class="linkrefs" target="_blank">Twitch</a>
+		<a href="https://myanimelist.net/animelist/marhh" class="linkrefs" target="_blank">Anime</a>
+		</div>
 	</body>
 </html>
 	
