--- a/web.html
+++ b/web.html
@@ -6,7 +6,7 @@ Created by Nova
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="design.css">
-		<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Arimo|Lobster" rel="stylesheet">
 		<link rel="shortcut icon" href="imgs/titleicon.ico" type="image/png"> 
 		<title>Nova</title>
 	</head>
@@ -17,6 +17,7 @@ Created by Nova
 		<a href="https://twitter.com/ActuallyNova" class="linkrefs" target="_blank">Twitter</a>
 		<a href="https://github.com/actuallynova/" class="linkrefs" target="_blank">Git</a>
 		<a href="https://steamcommunity.com/id/nova_xd" class="linkrefs" target="_blank">Steam</a>
+		<a href="https://worldofwarcraft.com/en-gb/character/stormscale/calamithi" class="linkrefs" target="_blank">Warcraft</a>
 		<a href="https://www.twitch.tv/novaeu" class="linkrefs" target="_blank">Twitch</a>
 		<a href="https://myanimelist.net/animelist/marhh" class="linkrefs" target="_blank">Anime</a>
 		</div>
