--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Created by Nova
 		<div class="blackbar">Nova</div>
 		<img src="imgs/background.jpg" alt="background" class="bgimg" type="image/png">
 		<a href="https://twitter.com/ActuallyNova" class="linkrefs" target="_blank">Twitter</a>
-		<a href="https://github.com/actuallynova/" class="linkrefs" target="_blank">Git</a>
+		<a href="https://github.com/actuallynova/" class="linkrefs" target="_blank">GitHub</a>
 		<a href="https://steamcommunity.com/id/nova_xd" class="linkrefs" target="_blank">Steam</a>
 		<a href="https://worldofwarcraft.com/en-gb/character/stormscale/calamithi" class="linkrefs" target="_blank">Warcraft</a>
 		<a href="https://www.twitch.tv/novaeu" class="linkrefs" target="_blank">Twitch</a>
