Discord Link added + styled

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ Created by Nova
 	<body>
 		<div class="blackbar">Nova</div>
 		<img src="imgs/background.jpg" alt="background" class="bgimg" type="image/png">
+		<div class="discord">
+			<a href="https://discordapp.com/users/167915048247885824" target="_blank">Calamithy#5716</a>
+		</div>
 		<a href="https://twitter.com/ActuallyNova" class="linkrefs" target="_blank">Twitter</a>
 		<a href="https://github.com/actuallynova/" class="linkrefs" target="_blank">GitHub</a>
 		<a href="https://steamcommunity.com/id/nova_xd" class="linkrefs" target="_blank">Steam</a>
