--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 Created by Nova
 22 Sept. 2018
 -->
@@ -24,6 +24,13 @@ Created by Nova
 		<a href="https://www.twitch.tv/novaeu" class="linkrefs" target="_blank">Twitch</a>
 		<a href="https://myanimelist.net/animelist/marhh" class="linkrefs" target="_blank">Anime</a>
 		</div>
+		<div class="copyright">
+		<div class="container">
+			<div class="fot">
+				<div class="fottext">© 2018 | Nova's Works</div>
+			</div>
+		</div>
+	</div>
 	</body>
 </html>
 	
