--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Created by Nova
 	
 	<body>
 		<div class="blackbar">Nova</div>
-		<img src="imgs/background.jpg" alt="background" class="bgimg" type="image/png">
+		<img src="imgs/ytbanner.jpg" alt="background" class="bgimg" type="image/png">
 		<div class="discord">
 			<a href="https://discordapp.com/users/167915048247885824" target="_blank">Calamithy#5716</a>
 		</div>
@@ -27,7 +27,7 @@ Created by Nova
 		<div class="copyright">
 		<div class="container">
 			<div class="fot">
-				<div class="fottext">© 2018 | Nova's Works</div>
+				<div class="fottext">© 2018 | Nova</div>
 			</div>
 		</div>
 	</div>
