--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Created by Nova
 		<div class="discord">
 			<a href="https://discordapp.com/users/167915048247885824" target="_blank">Calamithy#5716</a>
 		</div>
-		<a href="https://twitter.com/ActuallyNova" class="linkrefs" target="_blank">Twitter</a>
+		<a href="list.html" class="linkrefs" target="_blank">Twitter</a>
 		<a href="https://github.com/actuallynova/" class="linkrefs" target="_blank">GitHub</a>
 		<a href="https://steamcommunity.com/id/nova_xd" class="linkrefs" target="_blank">Steam</a>
 		<a href="https://worldofwarcraft.com/en-gb/character/stormscale/calamithi" class="linkrefs" target="_blank">Warcraft</a>
